--- a/app/css/step.css
+++ b/app/css/step.css
@@ -4,7 +4,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: url('/images/start.png') no-repeat center center fixed;
+	background: url('images/start.png') no-repeat center center fixed;
 	background-size: cover;
 }
 
